api room - fix api reminder